[tool.poetry]
name = "rooster-blue"
version = "0.0.0"
description = ""
authors = ["Zanie <contact@zanie.dev>"]
packages = [{ include = "rooster", from = "src" }]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[tool.poetry.scripts]
rooster = "rooster:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
packaging = "^23.1"
pygit2 = "^1.13.1"
httpx = "^0.25.0"
tqdm = "^4.66.1"
hishel = "^0.0.24"
pydantic = "^2.4.2"
marko = "^2.0.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.971"
ruff = ">=0.0.287"
syrupy = "^4.5.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]

# Ignore line length; the formatter handles it
ignore = ["E501"]

# Ignore some codes that break due to pytest fixtures in tests
per-file-ignores = {"tests/**/*.py" = ["F401", "F811"]}